@@ -473,6 +473,10 @@ C-API
 Library
 -------
 
+- Issue #4629: getopt raises an error if an argument ends with = whereas getopt
+  doesn't except a value (eg. --help= is rejected if getopt uses ['help='] long
+  options).
+
 - Issue #7989: Added pure python implementation of the `datetime`
   module.  The C module is renamed to `_datetime` and if available,
   overrides all classes defined in datetime with fast C impementation.
